--- a/src/app/auth/singup/singup.component.html
+++ b/src/app/auth/singup/singup.component.html
@@ -2,7 +2,7 @@
 
   
    
-  <div class="form-group">
+   <div class="form-group">
     <div class="ui-g-12 ui-md-4">
       <div class="ui-inputgroup">
           <span class="ui-inputgroup-addon"><i class="fa fa-user"></i></span>
@@ -18,7 +18,7 @@
                   <input type="password"  pInputText placeholder="Password"id="pwd" pPassword [(ngModel)]="pass">         
               </div>
             </div>
-            <button class="btn btn-sucess" (click)="sendtorail(S)">Submit</button>
+            <button class="btn btn-sucess" (click)="sendtorail()">Submit</button>
 </div>
 
 <div>
