--- a/src/app/pnr/pnr.component.html
+++ b/src/app/pnr/pnr.component.html
@@ -13,6 +13,6 @@
     
   </div>
   <button class="btn btn-success" (click)="pnrs()" >submit</button>
-  <button class="btn btn-danger"  (click)="print()">Take Printout</button>
+  <button class="btn btn-danger"  (click)="submit()">Take Printout</button>
   </div>
   
